# ray-tracer-cpp

./: .gitignore  CMakeLists.txt
src/: Intersection.h  Light.h  Object.h  Plane.cpp  Plane.h  RGBColor.h  Ray.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  main.cpp  vector3.cpp  vector3.h
